--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
-
+server.port=8000
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/kotlin_search
+spring.datasource.username=kotlinsearch
+spring.datasource.password=kotlinsearch
+spring.jpa.generate-ddl=true
+spring.jpa.show-sql=true
